<resources>
    <string name="app_name">SIMK3</string>


    <string name="selanjutnya">Selanjutnya</string>
    <string name="lewati">Lewati</string>
    <string name="mulai_sekarang">Mulai Sekarang</string>
    <string name="masuk_sebagai_tamu">Masuk Sebagai Tamu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masuk_sebagai">Masuk Sebagai</string>
    <string name="masuk_sekarang">Masuk Sekarang</string>
    <string name="ingat_saya">Ingat Saya</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi ?</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="email">Email</string>
    <string name="kembali_lagi_bersama_nsim_k3_teknik_undip">Kembali lagi bersama,\nSIM K3 Teknik Undip</string>
    <string name="masukkan_data_diri_anda_dibawah_ini_dengan_lengkap_untuk_masuk_ke_halaman_sim_k3_teknik_undip">Masukkan data diri anda dibawah ini dengan lengkap,untuk masuk ke halaman SIM K3 Teknik Undip</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="belum_mempunyai_akun">Belum mempunyai akun?</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="pilih_departemen">Pilih Departemen</string>
    <string name="selamat_datang_di_nsim_k3_teknik_undip">Selamat Datang di\nSIM K3 Teknik Undip</string>
    <string name="masukkan_data_diri_anda_dibawah_ini_dengan_lengkap_untuk_mendaftarkan_di_sim_k3_teknik_undip">Masukkan data diri anda dibawah ini dengan lengkap, untuk mendaftarkan di SIM K3 Teknik Undip</string>
    <string name="nama">Nama</string>
    <string name="sudah_mempunyai_akun">Sudah mempunyai akun?</string>
    <string name="masuk_disini">Masuk Disini</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="mohon_ditunggu">Mohon Ditunggu...</string>
    <string name="cek_email_sekarang">Cek Email Sekarang</string>
    <string name="silahkan_cek_email_anda_untuk_nmemverifikasi_akun_anda">Silahkan cek email anda untuk\nmemverifikasi akun anda</string>
    <string name="cek_email">Cek Email !</string>
    <string name="total_apar_nkurang_bagus">Total APAR\nKurang Baik</string>
    <string name="total_apar_n_tersedia">Total APAR\nTersedia</string>
    <string name="id">ID</string>
    <string name="nama_benda">Nama Benda</string>
    <string name="media">Media</string>
    <string name="tipe">Merk/Tipe</string>
    <string name="kapasitas">Kapasitas</string>
    <string name="unit_departemen">Unit Departemen</string>
    <string name="lokasi">Lokasi</string>
    <string name="tanggal_pembelian">Tanggal Pembelian</string>
    <string name="kadaluwarsa">Kadaluwarsa</string>
    <string name="terakhir_inspeksi">Terakhir Inspeksi</string>
    <string name="kondisi_terakhir">Kondisi Terakhir</string>
    <string name="inspeksi_apar_sekarang">Inspeksi APAR Sekarang</string>
    <string name="edit_informasi_apar">Edit Informasi APAR</string>
    <string name="informasi_apar">Informasi APAR</string>
    <string name="inspeksi_apar">Inspeksi APAR</string>
    <string name="reset">Reset</string>
    <string name="kondisi_tabung">Kondisi Tabung</string>
    <string name="isi_apar">Isi APAR</string>
    <string name="tekanan_tabung">Tekanan Tabung</string>
    <string name="handle">Handle</string>
    <string name="label">Label</string>
    <string name="mulut_pancar">Mulut Pancar</string>
    <string name="pipa_pancar">Pipa Pancar</string>
    <string name="tanda_pemasangan">Tanda Pemasangan</string>
    <string name="jarak_tanda">Jarak Tanda</string>
    <string name="jarak_antar_apar">Jarak Antar APAR</string>
    <string name="warna_tabung">Warna Tabung</string>
    <string name="pemasangan_apar">Pemasangan APAR</string>
    <string name="petunjuk_penggunaan">Petunjuk Penggunaan</string>
    <string name="label_catatan_pemeriksaan">Label Catatan Pemeriksaan</string>
    <string name="simpan_data">Simpan Data</string>
    <string name="inspeksi_berhasil">Inspeksi Berhasil</string>
    <string name="selamat_inspeksi_anda_berhasil_data_inspeksi_sudah_tersimpan_di_laporan_terima_kasih">Selamat! Inspeksi anda berhasil. Data inspeksi sudah tersimpan di laporan. Terima Kasih!</string>
    <string name="cek_laporan_inspeksi">Cek Laporan Inspeksi</string>
    <string name="kembali_ke_halaman_utama">Kembali ke Halaman Utama</string>
    <string name="laporan_inspeksi">Laporan Inspeksi</string>
    <string name="hapus_inspeksi">Hapus Inspeksi</string>
    <string name="anda_yakin_ingin_menghapus_data_inspeksi_apar_ini">Anda yakin ingin menghapus data inspeksi APAR ini ?</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="detail_apar">Detail APAR</string>
    <string name="edit_apar">Edit APAR</string>
    <string name="hapus_apar">Hapus APAR</string>
    <string name="tambah_apar">Tambah APAR</string>
    <string name="masukkan_data_informasi_apar_dibawah_ini_dengan_lengkap_dan_benar">Masukkan data informasi APAR dibawah ini dengan lengkap dan benar.</string>
    <string name="kapasitas_kg">Kapasitas (Kg)</string>
    <string name="tanggal_kadaluwarsa">Tanggal Kadaluwarsa</string>
    <string name="akun">Akun</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="edit_informasi_akun">Edit Informasi Akun</string>
    <string name="atur_ulang_kata_sandi">Atur Ulang Kata Sandi</string>
    <string name="daftar_unit">Daftar Unit</string>
    <string name="logout">KELUAR</string>
    <string name="edit_akun">Edit Akun</string>
    <string name="ubah_foto">Ubah Foto</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="kata_sandi_lama">Kata Sandi Lama</string>
    <string name="kata_sandi_baru">Kata Sandi Baru</string>
    <string name="verifikasi_sekarang">Verifikasi Sekarang</string>
    <string name="masuk">Masuk</string>
    <string name="mohon_maaf_sebelum_anda_memasukkan_akun_anda_maka_anda_tidak_dapat_melakukan_inspeksi_apar_terima_kasih">Mohon Maaf! Sebelum anda memasukkan akun anda, maka anda tidak dapat melakukan inspeksi APAR. Terima Kasih!</string>
    <string name="tidak_ada_notifikasi">Tidak ada Notifikasi</string>
    <string name="mohon_maaf_sebelum_anda_memasukkan_akun_anda_maka_anda_tidak_dapat_mendapatkan_notifikasi_terbaru_terima_kasih">Mohon Maaf! Sebelum anda memasukkan akun anda, maka anda tidak dapat mendapatkan notifikasi terbaru. Terima Kasih!</string>
    <string name="mohon_maaf_sebelum_anda_memasukkan_akun_anda_maka_anda_tidak_dapat_mengakses_simk3_terima_kasih">Mohon Maaf! Sebelum anda memasukkan akun anda, maka anda tidak dapat mengakses SIMK3. Terima Kasih!</string>
    <string name="silahkan_masuk_nterlebih_dahulu">Silahkan Masuk\nterlebih dahulu</string>
    <string name="data_apar">Data APAR</string>
    <string name="pilih">Pilih</string>
    <string name="silahkan_memasukkan_akun_anda_maka_anda_dapat_melakukan_inspeksi_apar_terima_kasih">Silahkan memasukkan akun anda, maka anda dapat melakukan inspeksi APAR. Terima Kasih!</string>
    <string name="hapus_data_apar">Hapus Data APAR</string>
    <string name="anda_yakin_ingin_menghapus_data_apar_ini">Anda yakin ingin menghapus\ndata APAR ini ?</string>
    <string name="perbarui_apar">Perbaharui APAR</string>
    <string name="filter">Filter</string>
    <string name="semua_media">Semua Media</string>
    <string name="apar_foam">APAR Foam</string>
    <string name="apar_co2">APAR CO2</string>
    <string name="apar_air">APAR Air</string>
    <string name="kondisi">Kondisi</string>
    <string name="semua_kondisi">Semua Kondisi</string>
    <string name="kondisi_baik">Kondisi Baik</string>
    <string name="kurang_bagus">Kurang Bagus</string>
    <string name="terapkan">Terapkan</string>
    <string name="pilih_unit_departemen">Pilih Unit Departemen</string>
    <string name="imageform">ImageForm</string>
    <string name="sempurna">Sempurna</string>
    <string name="baik">Baik</string>
    <string name="kurang_baik">Kurang Baik</string>
    <string name="buruk">Buruk</string>
    <string name="tidak_ada_laporan_inspeksi">Tidak ada Data</string>
    <string name="detail_inspeksi_apar">Detail Inspeksi APAR</string>
    <string name="hasil_inspeksi">Hasil Inspeksi</string>
    <string name="nama_petugas">Nama Petugas</string>
    <string name="tanggal_inspeksi">Tanggal Inspeksi</string>
    <string name="edit_inspeksi">Edit Inspeksi</string>
    <string name="edit_inspeksi_apar">Edit Inspeksi APAR</string>
    <string name="edit_unit">Edit Unit</string>
    <string name="nama_unit">Nama Unit</string>
    <string name="tidak_ada_data_apar">Tidak Ada Data</string>
    <string name="daftar_apar_kadaluwarsa">Daftar APAR Kadaluwarsa</string>
    <string name="daftar_apar_kurang_baik">Daftar APAR Kurang Baik</string>
    <string name="forgot_password">Lupa Kata Sandi</string>
    <string name="kirim_verifikasi">Kirim Verifikasi</string>
    <string name="tambah_unit">Tambah Unit</string>
    <string name="tambah_sekarang">Tambah Sekarang</string>
    <string name="alasan_apar_dihapus">Alasan APAR dihapus</string>

</resources>