<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="24dp">

    <ImageView
        android:id="@+id/ic_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/TxtStyle.Bold24"
        android:text="@string/inspeksi_berhasil"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_email" />

    <TextView
        android:id="@+id/tv_desc"
        style="@style/TxtStyle.Medium16"
        android:layout_width="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/selamat_inspeksi_anda_berhasil_data_inspeksi_sudah_tersimpan_di_laporan_terima_kasih"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:letterSpacing="0.025"
        android:lineSpacingExtra="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cek_laporan_inspeksi"
        style="@style/ButtonStyle"
        app:cornerRadius="8dp"
        android:text="@string/cek_laporan_inspeksi"
        android:shadowRadius="0"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/btn_back_home"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_neutral_outline"
        style="@style/Responsive24dp"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_cek_laporan_inspeksi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_skip"
            style="@style/TxtStyle.Bold16"
            android:padding="12dp"
            android:text="@string/kembali_ke_halaman_utama"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>