<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="24dp">

    <ImageView
        android:id="@+id/ic_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_cek_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_title"
        style="@style/TxtStyle.Bold24"
        android:text="@string/cek_email"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_email" />

    <TextView
        android:id="@+id/tv_desc"
        style="@style/TxtStyle.Medium16"
        android:text="@string/silahkan_cek_email_anda_untuk_nmemverifikasi_akun_anda"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:letterSpacing="0.025"
        android:lineSpacingExtra="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_verif"
        style="@style/ButtonStyle"
        app:cornerRadius="8dp"
        android:text="@string/cek_email_sekarang"
        android:shadowRadius="0"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>