<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.main.home.laporaninspeksi.dialogfilterinspeksi.DialogFilterInspeksiFragment"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:id="@+id/linearbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/ic_back"
                android:layout_marginTop="0dp"
                style="@style/ImageBackStyle"
                android:src="@drawable/ic_close"
                android:paddingVertical="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/filter"
                android:textColor="@color/colorNeutral500"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorNeutral100"
        app:layout_constraintTop_toBottomOf="@+id/linearbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_marginTop="24dp"
        style="@style/TxtStyle.SemiBold16"
        android:textColor="@color/colorNeutral500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:text="@string/media" />

    <RadioGroup
        android:id="@+id/rg_media"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/Responsive24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rb_semua_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:background="@drawable/bg_rb_primary_selector"
            android:button="@null"
            android:drawableRight="@null"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/color_tv_selector"
            android:textSize="14sp"
            android:text="@string/semua_media" />

        <RadioButton
            android:id="@+id/rb_apar_foam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:layout_marginTop="-51.5dp"
            android:layout_marginStart="148dp"
            android:paddingVertical="16dp"
            android:background="@drawable/bg_rb_primary_selector"
            android:button="@null"
            android:drawableRight="@null"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/color_tv_selector"
            android:textSize="14sp"
            android:text="@string/apar_foam" />

        <RadioButton
            android:id="@+id/rb_apar_air"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:paddingVertical="16dp"
            android:background="@drawable/bg_rb_primary_selector"
            android:button="@null"
            android:drawableRight="@null"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/color_tv_selector"
            android:textSize="14sp"
            android:text="@string/apar_air" />

        <RadioButton
            android:id="@+id/rb_apar_co2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:layout_marginTop="-52dp"
            android:layout_marginStart="120dp"
            android:paddingVertical="16dp"
            android:background="@drawable/bg_rb_primary_selector"
            android:button="@null"
            android:drawableRight="@null"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/color_tv_selector"
            android:textSize="14sp"
            android:text="@string/apar_co2" />


    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_marginTop="24dp"
        style="@style/TxtStyle.SemiBold16"
        android:textColor="@color/colorNeutral500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_media"
        android:text="@string/kondisi" />

    <RadioGroup
        android:id="@+id/rg_kondisi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/Responsive24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rb_semua_kondisi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:background="@drawable/bg_rb_primary_selector"
            android:button="@null"
            android:drawableRight="@null"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/color_tv_selector"
            android:textSize="14sp"
            android:text="@string/semua_kondisi" />

        <RadioButton
            android:id="@+id/rb_sempurna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:layout_marginTop="-51.5dp"
            android:layout_marginStart="156dp"
            android:paddingVertical="16dp"
            android:background="@drawable/bg_rb_primary_selector"
            android:button="@null"
            android:drawableRight="@null"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/color_tv_selector"
            android:textSize="14sp"
            android:text="@string/sempurna" />

        <RadioButton
            android:id="@+id/rb_baik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:paddingVertical="16dp"
            android:background="@drawable/bg_rb_primary_selector"
            android:button="@null"
            android:drawableRight="@null"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/color_tv_selector"
            android:textSize="14sp"
            android:text="@string/baik" />

        <RadioButton
            android:id="@+id/rb_kurang_baik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:layout_marginTop="-52dp"
            android:layout_marginStart="88dp"
            android:paddingVertical="16dp"
            android:background="@drawable/bg_rb_primary_selector"
            android:button="@null"
            android:drawableRight="@null"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/color_tv_selector"
            android:textSize="14sp"
            android:text="@string/kurang_baik" />

        <RadioButton
            android:id="@+id/rb_buruk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:layout_marginTop="-52dp"
            android:layout_marginStart="224dp"
            android:paddingVertical="16dp"
            android:background="@drawable/bg_rb_primary_selector"
            android:button="@null"
            android:drawableRight="@null"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/color_tv_selector"
            android:textSize="14sp"
            android:text="@string/buruk" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_unit_departemen"
        android:layout_marginTop="24dp"
        style="@style/TxtStyle.SemiBold16"
        android:textColor="@color/colorNeutral500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_kondisi"
        android:text="@string/unit_departemen" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:focusableInTouchMode="false"
        android:focusable="false"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/colorNeutral100"
        app:boxStrokeWidth="1.5dp"
        app:hintEnabled="false"
        app:placeholderText="Pilih Unit Departemen"
        app:placeholderTextColor="@color/colorNeutral200"
        app:expandedHintEnabled="false"
        app:placeholderTextAppearance="@style/TextHintStyle"
        app:endIconDrawable="@drawable/ic_arrow_down"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_unit_departemen">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_departemen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:inputType="text"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="P2K3"
            android:textColor="@color/colorNeutral500"
            android:textColorHint="@color/colorNeutral200"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorNeutral100"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_terapkan_filter"
        style="@style/ButtonStyle"
        app:cornerRadius="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/terapkan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

</androidx.constraintlayout.widget.ConstraintLayout>