<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="24dp">

    <ImageView
        android:id="@+id/ic_trash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_trash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/TxtStyle.Bold24"
        android:text="@string/hapus_data_apar"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_trash" />

    <TextView
        android:id="@+id/tv_desc"
        style="@style/TxtStyle.Medium16"
        android:layout_width="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/anda_yakin_ingin_menghapus_data_apar_ini"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:letterSpacing="0.025"
        android:lineSpacingExtra="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc">

        <TextView
            style="@style/TxtStyle.SemiBold14"
            android:layout_marginStart="0dp"
            android:text="@string/alasan_apar_dihapus"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:focusableInTouchMode="false"
            android:focusable="false"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/colorNeutral100"
            app:boxStrokeWidth="1.5dp"
            app:hintEnabled="false"
            app:placeholderText="Masukkan alasan APAR dihapus.."
            app:placeholderTextColor="@color/colorNeutral200"
            app:expandedHintEnabled="false"
            app:placeholderTextAppearance="@style/TextHintStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_reason_delete_apar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:inputType="text"
                android:maxLines="1"
                android:focusable="false"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textColor="@color/colorNeutral500"
                android:textColorHint="@color/colorNeutral200"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ya"
        style="@style/ButtonStyle"
        app:cornerRadius="8dp"
        android:text="@string/hapus_apar"
        android:shadowRadius="0"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/btn_tidak"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_neutral_outline"
        style="@style/Responsive24dp"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_ya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            style="@style/TxtStyle.Bold16"
            android:padding="12dp"
            android:text="@string/tidak"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>